# my-portfolio-api

./: .env.example  .gitignore  Dockerfile_test  README.md  chat_history.json  check_requirements.py  cleanner.py  django.har  main.py  performance.py  pyproject.toml  railway.json  requirements.txt  term.py
analytical/: admin.py  snapshots.py  tasks.py  views.py
analytical/api/: urls.py
analytical/api/serializers/: __init__.py  heatmap_serializer.py
analytical/api/views/: __init__.py  content_time_tickers.py  content_view_monitoring.py  heatmap_view.py  page_visitors_list_view.py  user_flow.py
analytical/migrations/: 0001_initial.py  0012_heatmapdata.py  0013_ipbanmodel.py
analytical/models/: __init__.py  heatmap_model.py  ip_ban_model.py  ip_ref_model.py  view_model.py
analytical/utils/: ip_data.py  view_counter.py
api/: urls.py
certificates/: admin.py  models.py
certificates/api/: urls.py
certificates/api/serializers/: __init__.py  certificate_provider_serializer.py  certificate_serializer.py
certificates/api/views/: __init__.py  certificate_create_view.py  certificate_provider_create_view.py  certificates_list_view.py
certificates/migrations/: 0001_initial.py  0002_alter_certificatemodel_end_date_and_more.py  0003_certificateprovidermodel_slug.py
chatwithme/: __init__.py  admin.py  apps.py  chat_history.py  llm_base.py  models.py  prompt_manger.py  signals.py  tests.py
chatwithme/api/: urls.py
chatwithme/api/serializers/: __init__.py  chat_history_serializer.py  chat_log_serializer.py  meeting_model_serializer.py  message_serializer.py
chatwithme/api/views/: __init__.py  chat_messagin.py  chat_with_llm_view.py  create_new_meeting_from_llm.py  load_chat_history.py  meeting_retrieve_update_delete_view.py  start_chat_with_llm.py
chatwithme/llm_models/: __init__.py  meeting_model.py
chatwithme/llm_tools/: __init__.py  get_blog_meta_data.py  search_knowledge_base.py
chatwithme/llm_tools/utils/: __init__.py  build_faiss_content_context.py  build_index_embed.py  faiss_search.py  get_embedder.py
chatwithme/middleware/: __init__.py  chat_session_trust.py
chatwithme/migrations/: 0001_initial.py  0002_meetingmodel_meeting_id.py  0003_alter_meetingmodel_notes.py  0004_chatlog_chatroom_delete_chathistory_chatlog_room.py  0005_chatroom_hash_stamp.py  0006_chatlog_extra_json.py
chatwithme/prompt_templates/: 1_personality.rule  2_general.rule  3_task.rule  4_info.rule  5_info.rule  6_function_usage.rule  chat.prompt  organize_a_meeting_tr
config/: admin.py  tests.py  urls.py
config/settings/: base.py  develop.py
contents/: models.py  tests.py
contents/api/: urls.py
contents/api/serializers/: __init__.py  comment_create_serializer.py  comment_serializer.py  (+3 more)
contents/migrations/: 0001_initial.py
custom_auth/: middleware.py
custom_auth/api/: urls.py
custom_auth/migrations/: 0001_initial.py
media_test/: admin.py  apps.py  models.py
media_test/migrations/: 0001_initial.py
message/migrations/: 0001_initial.py
pages/api/: urls.py
pages/migrations/: 0001_initial.py
projects/: models.py
projects/api/: urls.py
projects/migrations/: 0023_alter_contentmodel_title.py  0024_contentmodel_embedding.py  0025_alter_contentmodel_embedding.py  0026_alter_contentmodel_embedding.py
requirements/: requirements.latest.txt  requirements.server.latest.txt
tags/migrations/: 0001_initial.py
testimonial/: admin.py  models.py
testimonial/api/: urls.py
testimonial/migrations/: 0001_initial.py  0002_testimonial_photo.py  0003_testimonial_linkedin.py  0004_testimonial_title.py
(+26 files in other folders)
