[project]
name = "myportfolyoapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "cloudinary>=1.44.1",
    "discord-logger>=1.2.5",
    "django==6.0",
    "django-cloudinary-storage>=0.3.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "django-import-export>=4.4.0",
    "django-unfold>=0.76.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "lab>=8.7",
    "pandas>=2.3.3",
    "tox>=4.34.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "config*"]
exclude = ["static*", "uploads*", "media*", "staticfiles*"]
